corrected bootstraps options spacing

--- a/_ctoApps/vigenere/src/common/base.css
+++ b/_ctoApps/vigenere/src/common/base.css
@@ -52,3 +52,9 @@
 .alphabet-details {
     background: transparent;
 }
+.checkbox-inline {
+    margin-left: 10px;
+}
+#options-body {
+    padding-left: 5px;
+}
